--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Photography</title>
+        <script src="https://kit.fontawesome.com/240ee85a1f.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="container">
@@ -13,6 +15,7 @@
         <div class="right-section">
             <nav class="navbar">
                 <img src="./images/logo.svg" alt="logo" class="logo">
+                        <i class="fas fa-bars"></i>
                  <hr class="hori-line"/>
                 <div class="nav-items">
                     <a href="#" class="nav-links">Home</a>
